@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketZoom.pm - to get a closer view
 # Copyright (C) 2001-2011 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketZoom.pm,v 1.167 2011/12/08 14:06:41 mg Exp $
+# $Id: AgentTicketZoom.pm,v 1.168 2011/12/09 17:54:47 cg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -23,7 +23,7 @@ use Kernel::System::DynamicField::Backend;
 use Kernel::System::VariableCheck qw(:all);
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.167 $) [1];
+$VERSION = qw($Revision: 1.168 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -1011,6 +1011,12 @@ sub MaskAgentZoom {
             UserID   => $Self->{UserID},
         );
     }
+
+    # comment
+    $Param{HTMLArticleHeightDefault} =
+        $Self->{ConfigObject}->Get('Ticket::Frontend::HTMLArticleHeightDefault') || '100';
+    $Param{HTMLArticleHeightMax} =
+        $Self->{ConfigObject}->Get('Ticket::Frontend::HTMLArticleHeightMax') || '2500';
 
     # return output
     return $Self->{LayoutObject}->Output(
